--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BrewLogi"
         tools:targetApi="31">
         <activity
+            android:name=".StallPage"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -21,10 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PlaceOrder"
-            android:exported="false"/>
-        <activity android:name=".Organiser"
-            android:exported="false"/>
+        <activity
+            android:name=".PlaceOrder"
+            android:exported="false" />
+        <activity
+            android:name=".Organiser"
+            android:exported="false" />
     </application>
 
 </manifest>
