--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,12 @@ android {
 }
 
 dependencies {
+    def fragment_version = "1.3.4"
+    implementation "androidx.fragment:fragment:$fragment_version"
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.0.4'
