--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BrewLogi"
         tools:targetApi="31">
+        <activity
+            android:name=".ProductSelectOrder"
+            android:exported="false" />
         <activity
             android:name=".StallPage"
             android:exported="false" />
@@ -23,9 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".PlaceOrder"
-            android:exported="false" />
         <activity
             android:name=".ResponsibleDrinking"
             android:exported="false" />
@@ -42,8 +45,5 @@
             android:name=".OrderConfirmation"
             android:exported="false" />
     </application>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-
 
 </manifest>
